# MAA-Meow

./: .gitignore  LICENSE-Apache-2.0  README.md  README_EN.md  cliff.toml  gradle.properties  settings.gradle.kts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: android.yml  build-dev.yml  build-release.yml
app/: build.gradle.kts
app/src/androidTest/java/com/aliothmoon/maameow/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/aliothmoon/maameow/: RemoteService.aidl
app/src/main/assets/: achievements.json
app/src/main/cpp/: CMakeLists.txt  bridge.cpp  bridge.h
app/src/main/java/com/aliothmoon/maameow/: MaaApplication.kt  MainActivity.kt  UiMode.kt
app/src/main/java/com/aliothmoon/maameow/bridge/: NativeBridgeLib.java
app/src/main/java/com/aliothmoon/maameow/constant/: DefaultDisplayConfig.kt  MaaApi.kt  MaaFiles.kt  ShizukuDefaults.kt
app/src/main/java/com/aliothmoon/maameow/koin/: AppModule.kt  UseCaseModule.kt  ViewModelModule.kt
app/src/main/java/com/aliothmoon/maameow/maa/: DriverClass.java  InputControlUtils.java  MaaInstanceOptions.kt
app/src/main/native/: CMakeLists.txt  bridge.cpp  launcher.c
app/src/main/res/values/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: provider_paths.xml
app/src/test/java/com/aliothmoon/maameow/: ExampleUnitTest.kt
docs/: ROADMAP.md
gradle/: libs.versions.toml
scripts/: convert_ocr_ncnn.py  requirements.txt  setup_maa_core.py
(+250 files in other folders)
